feat(api): refine REST endpoints, enhance CRUD support, update Postman collection, and fix unit tests